--- a/views/modulo3.ejs
+++ b/views/modulo3.ejs
@@ -1,4 +1,4 @@
 <%- include('includes/header.ejs') %>
     <h1>Piezas musicales en conjunto</h1>
-    <br>Calificación de piezas del romanticismo: <%= calificacion %>
+    <br>Calificación de piezas del romanticismo: <%= calificacion.calificacion %>
 <%- include('includes/footer.ejs') %>
