Agregar preguntas laboratorio 13

--- a/views/modulo4.ejs
+++ b/views/modulo4.ejs
@@ -12,7 +12,14 @@
         <li>vash</li>
     </ul>
     <p>(Openbase, s.f.)</p>
+    <h1>Preguntas del laboratorio 13</h1>
+    <br><strong>¿Qué beneficios encuentras en el estilo MVC?</strong><br>
+    <p>El código queda mucho más limpio y se tiene solo una funcionalidad por cada archivo de código, es decir, no se encuentra estructura con lógica en un mismo archivo, permitiendo tener un código lasaña por capas y no un código spaghetti donde se tienen diferentes funcionalidades en un mismo archivo (vista, lógica y estructura en uno mismo)</p>
+    <br><strong>¿Encuentras alguna desventaja en el estilo arquitectónico MVC?</strong><br>
+    <p>Como todo está dividido en diferentes archivos, debugear el código y encontrar en dónde se encuentran los errores es un trabajo muy complicado, ya que no hace referencia directa a un mismo archivo. Lo mismo sucede en los casos donde se requiera actualiar algún módulo completo, en lugar de hacerlo en un solo archivo, se tendrían que buscar las secciones a cambiar en todos los diferentes módulos o carpetas</p>
+
     <footer>
+        <h3>Referencias</h3>
         <ul>
             <li>Openbase. (s.f.). 10 Best Node.js HTML Templeating Engine Librarires. Recuperado de: <a href="https://openbase.com/categories/js/best-nodejs-html-templating-engine-libraries" target="_blank">https://openbase.com/categories/js/best-nodejs-html-templating-engine-libraries</a></li>
         </ul>
