Agregar registro de usuarios

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -9,6 +9,6 @@
     <head>
 
     <body>
-    <% if (usuario != null) { %>
+    <% if (usuario != '') { %>
         <h1>Hola <%= usuario %></h1>
     <% } %>
