--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,10 +1,10 @@
 <%- include('includes/header.ejs') %>
-    <h1>Sign up de piezas Romanticismo</h1>
+    <h1>Registro de usuarios de piezas Romanticismo</h1>
         <p>Ingresa los datos del nuevo usuario:</p>
         <form action="/users/signup" method="POST">
             <label for="nombre">Nombre completo del nuevo usuario: </label>
             <input type="text" name="nombre" required>
-            <label for="username">Nombre completo del nuevo usuario: </label>
+            <label for="username">Nombre de usuario: </label>
             <input type="text" name="username" required>
             <label for="password">Constraseña: </label>
             <input type="password" name="password" required>
