Lab 17 Bases de datos

--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -18,6 +18,8 @@
     <br> Modulo 3: <br>
     <ul>
         <li>modulo3/piezasRomanticismo</li>
+        <li>modulo3/nuevaPieza</li>
+        <li>modulo3/piezasMusicales</li>
     </ul>
     <br> Modulo 4: <br>
     <ul>
@@ -29,4 +31,5 @@
     <ul>
         <li>users/login</li>
         <li>users/signup</li>
+    </ul>
 <%- include('includes/footer.ejs') %>
