--- a/views/modulo4.ejs
+++ b/views/modulo4.ejs
@@ -30,6 +30,11 @@
         <dd>Compara las características digitales del usuario con lo que el sistema sabe de él y busca las discrepancias (Dirección ip de la ubicación diferente al usual))</dd>
     </dl>
     <p>(N-Able, 2019).</p>
+    <h1>Preguntas del laboratorio 17</h1>
+    <br><strong>¿Qué ventajas tiene escribir el código SQL únicamente en la capa del modelo?</strong>
+    <p>Tiene la ventaja de que no se maneja información de la base de datos fuera de esta capa, permitiendo un mayor nivel de seguridad, y al mismo tiempo, permite tener la información separada de toda la estructura de la página web. </p>
+    <br><strong>¿Qué es SQL injection y cómo se puede prevenir?</strong>
+    <p>Es introducir como entrada código SQL que pueda modificar la información guardada en la base de datos. Se puede prevenir al no específicar qué parámetros va a recibir de manera directa, sino haciendo una referencia a ellas después de haber escrito el código SQL</p>
     <footer>
         <h3>Referencias</h3>
         <ul>
