Agregar Lab 23 Stored Procedures

--- a/views/ingresarPiezas.ejs
+++ b/views/ingresarPiezas.ejs
@@ -10,5 +10,5 @@
         <input type="text" id="video" name="video" placeholder="https://www.youtube.com/embed/NkdgFfKIWbA">
         <input type="submit" value="Enviar">
     </form>
-
+    <a href="/modulo3/piezasMusicales">Ir a lista de piezas musicales</a>
 <%- include('includes/footer.ejs') %>
