--- a/views/piezasMusicales.ejs
+++ b/views/piezasMusicales.ejs
@@ -19,5 +19,6 @@
     <% } else { %>
         <h3>No hay piezas musicales</h3>
     <% } %>
+    <a href="/modulo3/nuevaPieza">Ingresar nueva Pieza</a><br>
     <a href="/inicio">Regresar a inicio con menú de módulos</a>
 <%- include('includes/footer.ejs') %>
