--- a/views/chopinop10no1.ejs
+++ b/views/chopinop10no1.ejs
@@ -7,4 +7,6 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
         </iframe>
+
+    <a href="/inicio">Regresar a inicio</a>
 <%- include('includes/footer.ejs') %>
