Agregar Lab 25 y bases de datos

--- a/views/modulo4.ejs
+++ b/views/modulo4.ejs
@@ -35,6 +35,11 @@
     <p>Tiene la ventaja de que no se maneja información de la base de datos fuera de esta capa, permitiendo un mayor nivel de seguridad, y al mismo tiempo, permite tener la información separada de toda la estructura de la página web. </p>
     <br><strong>¿Qué es SQL injection y cómo se puede prevenir?</strong>
     <p>Es introducir como entrada código SQL que pueda modificar la información guardada en la base de datos. Se puede prevenir al no específicar qué parámetros va a recibir de manera directa, sino haciendo una referencia a ellas después de haber escrito el código SQL</p>
+    <h1>Preguntas del laboratorio 19</h1>
+    <br><strong>¿En qué consiste el control de acceso basado en roles?</strong>
+    <p>Consiste en un sistema de seguridad en el cual se determinan las diferentes funcionalidades y vistas de los usuarios dependiendo de los roles que tiene cada uno</p>
+    <br><strong>Investiguen y describan 2 sistemas, uno que aplique RBAC y uno que no. Realicen un análisis de las ventajas y desventajas de cada uno con respecto al control de acceso.</strong>
+    <p></p>
     <footer>
         <h3>Referencias</h3>
         <ul>
