--- a/views/piezasMusicales.ejs
+++ b/views/piezasMusicales.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/header.ejs') %>}
+<%- include('includes/header.ejs') %>
     <h1>Lista de Piezas musicales</h1>
     <% if (piezas.length > 0) { %>
         <table>
