--- a/views/piezasRomanticismo.ejs
+++ b/views/piezasRomanticismo.ejs
@@ -33,10 +33,12 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
+                    <% if (flag == true) { %>
                     <form action="/modulo3/piezasRomanticismo" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
                         <label for="calificacion"> ¿Cómo
                         puntuarías del 1 al 10 el recital?</label><input type="number" name="calif" required
                         min="1" max="10"><input type="submit" value="Enviar_calificacion">
                     </form>
+                    <% } %>
 <%- include('includes/footer.ejs') %>
