--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,4 +2,16 @@
     <br>
     <a href="/users/logout">Salir</a>
 <% } %>
-</main></body>
+</main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script>
+
+  document.addEventListener('DOMContentLoaded', function() {
+    M.AutoInit();
+  });
+
+
+
+
+</script>
+</body>
