--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,8 +5,18 @@
     <title>Música Romanticismo</title>
     <meta charset="utf-8">
     </meta>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Natgas</title>
 
-    <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link rel="stylesheet" href="/css/styles.css">
+
+<head>
 
     <body>
     <% if (usuario != '') { %>
