--- a/views/inicioGeneral.ejs
+++ b/views/inicioGeneral.ejs
@@ -19,6 +19,7 @@
     <ul>
         <a href="/modulo3/piezasRomanticismo"><li>modulo3/piezasRomanticismo</li></a>
         <a href="/modulo3/nuevaPieza"><li>modulo3/nuevaPieza</li></a>
+        <a href="/modulo3/ingresarPR"><li>modulo3/ingresarPR</li></a>
         <a href="/modulo3/piezasMusicales"><li>modulo3/piezasMusicales</li></a>
     </ul>
     <br> Modulo 4: <br>
